# epscraper

./: .gitignore  LICENSE  README.md  README_SEARCHER.md  director_instructions.md  downloader_instructions.md  example_module_usage.py  example_searcher_usage.py  pyproject.toml  requirements.txt
docs/: INTEGRATION_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README_DOWNLOADER.md  WORKFLOW.md
html/: example.html  example2.html
instrs/: director_instructions.md  downloader_instructions.md  general_instructions.md  ocr_instructions.md  scraper_instructions.md  searcher_instructions.md
src/: downloader.py  search_and_download.py  superdownloader.py  supermain.py  superocr.py  superscraper.py  supersearcher.py
src/epscrape/: __init__.py  search_and_download.py  supermain.py  superocr.py
src/epscraper/: __init__.py  scrape_them_all.py  search_and_download.py  superdownloader.py  supermain.py  superocr.py  text_extract.py
