[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epstein-files"
version = "0.1.0"
description = "Search, download, and OCR PDFs from justice.gov/epstein"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Daniel Bakkelund", email = "daniel_bakkelund@hotmail.com"}
]
keywords = ["pdf", "ocr", "scraping", "epstein", "justice.gov"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "Topic :: Text Processing :: General",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "setuptools",
    "numpy",
    "pandas",
    "matplotlib",
    "python-dotenv",
    "scrapy",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "playwright",
    "selenium",
    "undetected-chromedriver",
    "pytesseract",
    "pdf2image",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[project.urls]
Homepage = "https://github.com/danielbakkelund/epstein"
Repository = "https://github.com/danielbakkelund/epstein"
Issues = "https://github.com/danielbakkelund/epstein/issues"

[project.scripts]
epstein-search = "epscraper.search_and_download:main"
epstein-ocr = "epscraper.superocr:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
epscraper = ["*.md"]
